fix: fix price alignment

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -107,7 +107,7 @@ header {
         &--period {
             margin: 4rem 0 3.4rem;
             display: flex;
-            justify-content: flex-end;
+            justify-content: center;
             align-items: center;
             span {
                 font-size: 3.2rem;
@@ -143,7 +143,7 @@ header {
                 margin: 0;
                 margin-bottom: 4.1rem;
             }
-            &--monthly {
+            &--period {
                 order: 2;
                 grid-column: 2/3;
                 grid-row: 1/2;
